# ml-cli

./: README.md  ml_cli.py  pyproject.toml  scripts.py
ml_cli/: README.md  __init__.py  cli.py  pyproject.toml  scripts.py
ml_cli/commands/: evaluate.py  get_feature_importance.py  predict.py  train.py
ml_cli/data/: preprocess_data.py
ml_cli/ml_cli/commands/: evaluate.py  predict.py  train.py
ml_cli/ml_cli/data/: make_dataset.py  preprocess_data.py
ml_cli/ml_cli/models/: xgb_model.py
ml_cli/ml_cli/utils/: logger.py  metrics.py
ml_cli/tests/: test_make_dataset.py  test_predict.py  test_preprocess_data.py
notebooks/: data_preparation.ipynb
src/data/: check_data.py  make_dataset.py  preprocess_data.py  split_data.py
src/models/: model.py  predict.py  train.py
src/utils/: visualization.py
tests/: test_evaluate.py  test_get_feature_importance.py  test_metrics.py  test_predict.py  test_preprocess_data.py  test_train.py  test_xgb_model.py
tests/data/: model.pkl  titanic_without_target.csv
