[tool.poetry]
name = "titanic-problem"
version = "0.1.0"
description = "A CLI to evaluate and train a ML model over the titanic problem data"
authors = ["JoseGuillermoAraya <jose.araya@bci.cl>"]
readme = "README.md"
packages = [{include = "titanic_problem"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
